--- a/src/pages/addskills.css
+++ b/src/pages/addskills.css
@@ -84,4 +84,72 @@ body {
     border-radius: 5px;
     cursor: pointer;
   }
+
+/* for tablet */
+  @media (max-width: 800px) {
+    .skillscontainer {
+      width: 90%;
+      height: auto;
+      margin: 250px auto;
+      padding: 20px;
+    }
+  
+    .searchskill input {
+      width: 85%;
+      padding: 10px 10px 10px 30px;
+    }
+  
+    .skill {
+      width: 120px;
+      padding: 8px 16px;
+    }
+  
+    .buttons {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 40px;
+    }
+  
+    .buttons button {
+      width: 100%;
+      margin: 10px 0;
+    }
+  }
+  
+  /* for mobile phone */
+  @media (max-width: 500px) {
+    .skillscontainer {
+      width: 100%;
+      height: auto;
+      margin: 170px auto;
+      padding: 15px;
+    }
+  
+    h2 {
+      font-size: 1.5rem;
+      padding: 10px;
+    }
+  
+    .searchskill input {
+      width: 80%;
+      padding: 10px 10px 10px 25px;
+    }
+  
+    .skill {
+      width: 100px;
+      padding: 6px 12px;
+      font-size: 15px;
+    }
+  
+    .buttons {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 30px;
+    }
+  
+    .buttons button {
+      width: 100%;
+      margin: 10px 0;
+    }
+  }
   
